Fix: Horizontal scroll in intro

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,13 +5,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  margin: 92px 442px 0 148px;
+  margin: 92px calc(100% - 690px - 148px) 0 148px;
   padding: 0;
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-    margin: 92px 286px 0 48px;
+    margin: 92px calc(100% - 690px - 48px) 0 48px;
   }
 }
 
