--- a/blocks/places-grid/__image/places-grid__image.css
+++ b/blocks/places-grid/__image/places-grid__image.css
@@ -28,6 +28,6 @@
     min-height: 320px;
     width: 100vw;
     height: 100vw;
-    margin: 32px 0 0;
+    margin: 20px 0 0;
   }
 }
